Update files as needed

--- a/journal.ipynb
+++ b/journal.ipynb
@@ -67,16 +67,12 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.cluster import KMeans\n",
-    "from sklearn.preprocessing import StandardScaler\n"
+    "from sklearn.pipeline import Pipeline\n"
    ]
   },
   {
@@ -322,21 +318,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unique Departments: [0 1]\n",
-      "Unique salary: [0 1]\n"
+      "Unique Departments: ['sales' 'accounting' 'hr' 'technical' 'support' 'management' 'IT'\n",
+      " 'product_mng' 'RandD' 'marketing']\n",
+      "Unique salary: ['low' 'medium' 'high']\n"
      ]
     }
    ],
    "source": [
-    "unique_departments = data['Work_accident'].unique()\n",
-    "unique_salary = data['promotion_last_5years'].unique()\n",
+    "unique_departments = data['Department'].unique()\n",
+    "unique_salary = data['salary'].unique()\n",
     "print(\"Unique Departments:\", unique_departments)\n",
     "print(\"Unique salary:\", unique_salary)"
    ]
